--- a/templates/components/input.html
+++ b/templates/components/input.html
@@ -1,11 +1,12 @@
-<form method = "POST" action = "/"
+<form
+  hx-post = "/todo" hx-target = "#todo-list" hx-swap = "innerHTML"
   class="flex w-full max-w-md gap-2 p-2 border-2 border-gray-200 rounded-lg focus-within:border-blue-500">
   
-  <input type = "text" name = "description" label = "Add todo" placeholder = "What to do..?"
+  <input type = "text" name = "description" placeholder = "What to do..?"
     class="flex-1 bg-transparent border-none outline-none px-2 py-1 text-gray-700"> 
 
   <button type = "submit"
     class="p-2 text-blue-600 hover:text-blue-800 transition-colors">
-    <i class = "fa-solid fa-paper-plane fa-lg"></i>
+    Submit!
   </button>
 </form>
