--- a/templates/components/input.html
+++ b/templates/components/input.html
@@ -1,12 +1,14 @@
 <form
   hx-post = "/todo" hx-target = "#todo-list" hx-swap = "innerHTML"
-  class="flex w-full max-w-md gap-2 p-2 border-2 border-gray-200 rounded-lg focus-within:border-blue-500">
+  class="flex w-full max-w-md gap-2 p-2 border-2 border-gray-200 rounded-full focus-within:border-blue-500">
   
   <input type = "text" name = "description" placeholder = "What to do..?"
     class="flex-1 bg-transparent border-none outline-none px-2 py-1 text-gray-700"> 
 
   <button type = "submit"
     class="p-2 text-blue-600 hover:text-blue-800 transition-colors">
-    Submit!
+<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M6 12 3.269 3.125A59.769 59.769 0 0 1 21.485 12 59.768 59.768 0 0 1 3.27 20.875L5.999 12Zm0 0h7.5" />
+</svg>
   </button>
 </form>
