--- a/templates/components/todo.html
+++ b/templates/components/todo.html
@@ -1,9 +1,9 @@
-<ul id= "todo-list" class="space-y-3" hx-trigger = "click">
+<ul id= "todo-list" class="space-y-3">
   {% for todo in todo_list.todos %}
-    <li class="flex items-center p-4 bg-slate-50 rounded-xl border border-transparent hover:border-blue-200 transition-all group">
+  <li id = "todo-item-{{loop.index0}}" class="flex items-center p-4 bg-slate-50 rounded-xl border border-transparent hover:border-blue-200 transition-all group">
       <span class="flex-1 text-slate-700 font-medium">{{ todo.description }}</span>
 
-      <button class="opacity-0 group-hover:opacity-100 text-slate-400 hover:text-blue-600 transition-opacity">
+      <button hx-get = "/todo/update/{{loop.index0}}" hx-target = "#todo-items-{{loop.index0}}" hx-swap = "innerHTML" class="opacity-0 group-hover:opacity-100 text-slate-400 hover:text-blue-600 transition-opacity">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
         </svg>
