--- a/templates/components/input.html
+++ b/templates/components/input.html
@@ -1,6 +1,6 @@
 <form
   hx-post = "/todo" hx-target = "#todo-list" hx-swap = "outerHTML" hx-on::after-request="if(event.detail.successful) this.reset()"
-  class="flex w-full max-w-md gap-2 p-2 border-2 border-gray-200 rounded-full focus-within:border-blue-500">
+  class="flex w-full max-w-md gap-2 p-2 border-2 border-gray-200 rounded-lg focus-within:border-blue-500">
   
   <input type = "text" name = "description" placeholder = "What to do..?"
     class="flex-1 bg-transparent border-none outline-none px-2 py-1 text-gray-700"> 
