finally integrated SQLx with postgres. Fully functional, will optimize further

--- a/templates/components/update.html
+++ b/templates/components/update.html
@@ -1,5 +1,5 @@
-<form hx-patch="/todo/update/{{index}}" 
-      hx-target="#todo-item-{{index}}" 
+<form hx-patch="/todo/update/{{id}}" 
+      hx-target="#todo-item-{{id}}" 
       hx-swap="outerHTML" 
       class="flex w-full max-w-md items-center gap-3 p-2 border-2 border-gray-200 rounded-lg focus-within:border-blue-400 bg-white">
   
