--- a/templates/components/todo.html
+++ b/templates/components/todo.html
@@ -1,5 +1,5 @@
 <ul id= "todo-list" class="space-y-3">
-  {% for todo in todo_list.todos %}
+  {% for todo in todo_list %}
     {% let index = loop.index0 %}
     {% include "todo_item.html" %}
   {% else %}  
